--- a/src/appPopup.html
+++ b/src/appPopup.html
@@ -1,11 +1,18 @@
 <!doctype html>
 <html>
   <head>
-    <title>Bug Catcher</title>
+    <title>X Company Enterprises
+</title>
     <script src="appPopup.js"></script>
   </head>
   <body>
-    <h1>Bug Tracker</h1>
+    <h1>X Company Enterprises
+</h1>
     <button id="checkPage">Home page</button>
+  </body>
+  
+  <body>
+
+    <button id="contact">Contact Us</button>
   </body>
 </html>
