Updated Extension's ui
Updated the chrome popup html ui.
Added new CSS stylesheet for working with new Apercu Pro fonts
Created new company logo
set company name to "LabTech Support"

--- a/src/appPopup.html
+++ b/src/appPopup.html
@@ -1,16 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>X Company Enterprises
-</title>
+    <link rel="stylesheet" type="text/css" href="styling.css">
+    <img src="LabTechHeader.png" alt="LabTech Logo">
     <script src="appPopup.js"></script>
   </head>
   <body>
-    <h1>X Company Enterprises
-</h1>
     <button id="checkPage">Homepage</button>
   </body>
-  
   <body>
 
     <button id="contact">Contact Us</button>
