Updated CSS sheet for quick report
Added styling options for the quick report drop down
made it so that when you click quick report while it is open it will close
+Mail Vector
+Email Vector

--- a/ChromeExtension/src/appPopup.html
+++ b/ChromeExtension/src/appPopup.html
@@ -15,4 +15,27 @@
 
     <button id="contact" class= "button hvr-grow">Contact Us</button>
   </body>
+
+  <body>
+
+    <p id=quickReport ><button id="quickRep" class= "button hvr-grow">Quick Report</button>
+
+
+
+	<form id="quickRep1">
+
+				<input type="text" id="name1" placeholder="Enter the subject here...">
+				<input type="email" id="email1" placeholder="Enter your e-mail here...">
+				<input type="text" id="msg1" placeholder="Enter your issue here...">
+								<br><br>
+
+				<input type="button" name="submit1" id="submit1" value="Submit">
+
+<!-- attach file button -->
+				 <form action="/action_page.php">
+				  <input type="file" name="pic" accept="image/*">
+				</form>
+	</form>
+
+  </body>
 </html>
