--- a/ChromeExtension/src/appPopup.html
+++ b/ChromeExtension/src/appPopup.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="styling.css">
     <!--<link rel="stylesheet" href="/CSS/animate.min.css">-->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
      <link href="./CSS/Hover-master/css/hover.css" rel="stylesheet" media="all">
     <img src="LabTechHeader.png" alt="LabTech Logo" class="animated bounceInLeft">
@@ -24,9 +25,9 @@
 
 	<form id="quickRep1" class="animated bounceInLeft">
 
-				<input type="text" id="name1" placeholder="Enter the subject here...">
-				<input type="email" id="email1" placeholder="Enter your e-mail here...">
-				<textarea id="msg1" rows=3 placeholder="Enter your issue here..."></textarea>
+				<input type="text" id="name1" class="placeicons" placeholder="&#xf05a; Enter the subject here...">
+				<input type="email" id="email1" class="placeicons" placeholder="&#xf0e0; Enter your e-mail here...">
+				<textarea id="msg1" rows=3 class="placeicons" placeholder="&#xf188; Report your issue/bug here..."></textarea>
 								<br><br>
 
 
