added labels for text areas

--- a/ChromeExtension/src/appPopup.html
+++ b/ChromeExtension/src/appPopup.html
@@ -25,8 +25,11 @@
 
 	<form id="quickRep1" class="animated bounceInLeft">
 
+        <label>Subject</label>
 				<input type="text" id="name1" class="placeicons" placeholder="&#xf05a; Enter the subject here...">
+        <label>Email</label>
 				<input type="email" id="email1" class="placeicons" placeholder="&#xf0e0; Enter your e-mail here...">
+        <label>Description</label>
 				<textarea id="msg1" rows=3 class="placeicons" placeholder="&#xf188; Report your issue/bug here..."></textarea>
 								<br><br>
 
