--- a/ChromeExtension/src/appPopup.html
+++ b/ChromeExtension/src/appPopup.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="styling.css">
     <!--<link rel="stylesheet" href="/CSS/animate.min.css">-->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
      <link href="./CSS/Hover-master/css/hover.css" rel="stylesheet" media="all">
     <img src="LabTechHeader.png" alt="LabTech Logo" class="animated bounceInLeft">
@@ -15,27 +16,31 @@
 
     <button id="contact" class= "button hvr-grow">Contact Us</button>
   </body>
-  
+
   <body>
-	
-    <button id="quickRep" class= "button hvr-grow">Quick Report</button>
-		 
-		 
 
-	<form id="quickRep1">
+    <p id=QuickReport ><button id="quickRep" class= "button hvr-grow">Quick Report</button> </p>
 
-				<input type="text" id="name1" placeholder="Enter the subject here...">
-				<input type="email" id="email1" placeholder="Enter your e-mail here...">
-				<input type="text" id="msg1" placeholder="Enter your issue here...">
+
+
+	<form id="quickRep1" class="animated bounceInLeft">
+
+        <label>Subject</label>
+				<input type="text" id="name1" class="placeicons" placeholder="&#xf05a; Enter the subject here...">
+        <label>Email</label>
+				<input type="email" id="email1" class="placeicons" placeholder="&#xf0e0; Enter your e-mail here...">
+        <label>Description</label>
+				<textarea id="msg1" rows=3 class="placeicons" placeholder="&#xf188; Report your issue/bug here..."></textarea>
 								<br><br>
 
-				<input type="button" name="submit1" id="submit1" value="Submit">
 
-<!-- attach file button -->	
+<!-- attach file button -->
 				 <form action="/action_page.php">
 				  <input type="file" name="pic" accept="image/*">
-				</form> 
+
+          <p id=QuickReport> <input type="button" name="submit1" id="submit1" value="Submit" class= "button hvr-grow"> </p>
+				</form>
 	</form>
-	
+
   </body>
 </html>
